cmake_minimum_required(VERSION 3.20)
project(CGalgo)

set(CMAKE_CXX_STANDARD 14)

if(WIN32)
    include_directories("D:/Environments/OpenGL/include")
    link_directories("D:/Environments/OpenGL/lib")
elseif(APPLE)
    include_directories(/usr/local/include)
    include_directories(~/Documents/environments/glad/include)
    link_directories(/usr/local/lib)
    link_libraries("-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
endif()
add_executable(CGalgo main.cpp glad.c dda.cpp algo_imp.h)
target_link_libraries(CGalgo glfw3)